# symbol_paths

./: Cargo.toml  README.md
src/: arbitrager.rs  main.rs  prices.rs  utility.rs
src/books/: mod.rs  poloniex.rs
